# seascape

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: main.cpp
src/: CMakeLists.txt  lib.cpp  lib.hpp
src/nested/: CMakeLists.txt  a.cpp  a.hpp
